--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,37 +1,46 @@
-<%= form_with(model: event, local: true) do |form| %>
-  <% if event.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(event.errors.count, "error") %> prohibited this event from being saved:</h2>
-
-      <ul>
-      <% event.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+<div class="modal-dialog modal-nm">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h4 class="modal-title">スケジュール登録</h4>
     </div>
-  <% end %>
+    <div class="modal-body">
+      <%= form_with(model: event, remote:true) do |form| %>
+        <% if event.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(event.errors.count, "error") %> prohibited this event from being saved:</h2>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
+            <ul>
+            <% event.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+            </ul>
+          </div>
+        <% end %>
 
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_field :body %>
-  </div>
+        <div class="field">
+          <%= form.label :title %>
+          <%= form.text_field :title %>
+        </div>
 
-  <div class="field">
-    <%= form.label :start_date %>
-    <%= form.datetime_select :start_date %>
-  </div>
+        <div class="field">
+          <%= form.label :body %>
+          <%= form.text_field :body %>
+        </div>
 
-  <div class="field">
-    <%= form.label :end_date %>
-    <%= form.datetime_select :end_date %>
-  </div>
+        <div class="field">
+          <%= form.label :start_date %>
+          <%= form.datetime_select :start_date %>
+        </div>
 
-  <div class="actions">
-    <%= form.submit %>
+        <div class="field">
+          <%= form.label :end_date %>
+          <%= form.datetime_select :end_date %>
+        </div>
+
+        <div class="actions">
+          <%= form.submit %>
+        </div>
+      <% end %>
+    </div>
   </div>
-<% end %>
+</div>
